excluded API doc from make all target

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,10 +1,15 @@
-all-local: Doxyfile
+all-local:
+	@echo "***"
+	@echo "*** To create the Doxygen API documentation, use 'make doc'"
+	@echo "***"
+
+doc: Doxyfile
 	doxygen Doxyfile
 	rm -rf $(srcdir)/html/developers
 	mkdir --parents $(srcdir)/html/developers
 	cp *.html html/developers
 
-install-data-local:
+install-data-local: doc
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/html
 	$(INSTALL_DATA) $(srcdir)/html/* $(DESTDIR)$(pkgdatadir)/html/
 
