--- a/configure.ac
+++ b/configure.ac
@@ -128,6 +128,7 @@ AC_CONFIG_FILES([Makefile \
 		 app/inputtest/Makefile \
 		 app/scenetest/Makefile \
 		 app/spadestest/Makefile \
+		 app/rcssmonitor3d/Makefile \
 		 app/zeitgeisttest/Makefile \
                  doc/Makefile \
 		 doc/Doxyfile])
