Added initial version of rcssserv3d. This is a simple monitor that works together with the MonitorTest class in /plugin/monitortest. By default it connects to 127.0.0.1:12001, the default spades monitorport for a local server. MonitorTest and RcssMonitor3d exchange very simple S-Expressions in the form '(player x y z)' that are intepreted as 3 dimensional coordinates. The received coordinates are displayed a spheres above a grid.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ app/inputtest/Makefile
 app/inputtest/Makefile.in
 app/inputtest/inputtest
 app/inputtest/sys
+app/rcssmonitor3d/.deps
+app/rcssmonitor3d/.libs
+app/rcssmonitor3d/Makefile
+app/rcssmonitor3d/Makefile.in
+app/rcssmonitor3d/spadestest
+app/rcssmonitor3d/sys
 app/scenetest/.deps
 app/scenetest/.libs
 app/scenetest/Makefile
