fixes to include the rcssmonitor3d subdir

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -3,8 +3,8 @@ SUBDIRS = \
 	  coretest \
 	  fonttest \
 	  inputtest \
+	  rcssmonitor3d \
 	  scenetest \
 	  spadestest \
 	  zeitgeisttest 
-	  rcssmonitor3d
 
