--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -45,6 +45,7 @@ agentaspect/agentaspect.cpp \
 agentaspect/agentaspect_c.cpp \
 agentaspect/collisionperceptor.cpp \
 agentaspect/collisionperceptor_c.cpp \
+agentaspect/effector.cpp \
 agentaspect/effector_c.cpp \
 agentaspect/perceptor.cpp \
 agentaspect/perceptor_c.cpp \
