added simple GameStateAspect. This aspect should encapsulate all global soccer game state. Currently it defines defines several play modes taken from the 2D server and provides access to the current one. It further manages the current game time and increments it when in PM_PlayOn.

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,8 @@ plugin/soccer/createeffector/.libs
 plugin/soccer/createeffector/Makefile
 plugin/soccer/createeffector/Makefile.in
 plugin/soccer/createeffector/initeffector.la
+plugin/soccer/gamestateaspect/Makefile
+plugin/soccer/gamestateaspect/Makefile.in
 plugin/soccer/initeffector/*.lo
 plugin/soccer/initeffector/.deps
 plugin/soccer/initeffector/.libs
