modified CollisionPerceptor to be a plugin. This is possible now as there is no longer a direct dependency to the physics system.
The CollisionPerceptor now uses a PerceptorHandler. This class is an
implementation of a CollisionHandler that forwards collision to an
CollisionPerceptor. From there collisions are accessible from an
agent.

The CollisionPerceptor will only receive updates from Colliders that
register a PerceptorHandler. Therefore a finer control is possible.

--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,12 @@ lib/zeitgeist/telnetserver/.deps
 lib/zeitgeist/telnetserver/.dirstamp
 plugin/Makefile
 plugin/Makefile.in
+plugin/collisionperceptor/*.la
+plugin/collisionperceptor/*.lo
+plugin/collisionperceptor/.deps
+plugin/collisionperceptor/.libs
+plugin/collisionperceptor/Makefile
+plugin/collisionperceptor/Makefile.in
 plugin/filesystemrar/.deps
 plugin/filesystemrar/.libs
 plugin/filesystemrar/Makefile
