--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -14,7 +14,10 @@ sexpmonitor/sexpmonitor_c.cpp \
 fieldflag/fieldflag.cpp \
 fieldflag/fieldflag_c.cpp \
 ball/ball.cpp \
-ball/ball_c.cpp
+ball/ball_c.cpp \
+visionperceptor/visionperceptor.h \
+visionperceptor/visionperceptor.cpp \
+visionperceptor/visionperceptor_c.cpp
 
 # -module tells automake we're not building a library but a loadable module
 # so we don't need the "lib" prefix in the module name
