--- a/.gitignore
+++ b/.gitignore
@@ -281,6 +281,12 @@ plugin/soccer/createeffector/.libs
 plugin/soccer/createeffector/Makefile
 plugin/soccer/createeffector/Makefile.in
 plugin/soccer/createeffector/initeffector.la
+plugin/soccer/dasheffector/.deps
+plugin/soccer/dasheffector/.libs
+plugin/soccer/dasheffector/Makefile
+plugin/soccer/dasheffector/Makefile.in
+plugin/soccer/dasheffector/*.la
+plugin/soccer/dasheffector/*.lo
 plugin/soccer/fieldflag/*.lo
 plugin/soccer/fieldflag/.deps
 plugin/soccer/fieldflag/.libs
