added KickEffector. The KickEffector applies a force to the ball if the agent using this effector is within reach. The effector accepts (but ignores in its current form) a parameter that allows the agent to either kick the ball horizontally or with an angle.

--- a/.gitignore
+++ b/.gitignore
@@ -301,6 +301,12 @@ plugin/soccer/initeffector/.libs
 plugin/soccer/initeffector/Makefile
 plugin/soccer/initeffector/Makefile.in
 plugin/soccer/initeffector/initeffector.la
+plugin/soccer/kickeffector/.deps
+plugin/soccer/kickeffector/.libs
+plugin/soccer/kickeffector/Makefile
+plugin/soccer/kickeffector/Makefile.in
+plugin/soccer/kickeffector/*.la
+plugin/soccer/kickeffector/*.lo
 plugin/soundsystembass/.deps
 plugin/soundsystembass/.libs
 plugin/soundsystembass/Makefile
