- added new class SoccerControlAspect that acts as a baseclass for all ControlAspects in the soccer simulation and collects utility functions and typedefs used throughout the soccer simulation
- added new class soccerruleaspect that implements the soccer
rules. Currently it checks in PM_PlayOn if the ball rolls out of the
soccer field and blocks it

- cleaned up BallStateAspect und GameControlAspect to use common
methods from SoccerControlAspect

--- a/.gitignore
+++ b/.gitignore
@@ -318,6 +318,10 @@ plugin/soccer/sexpmonitor/Makefile
 plugin/soccer/sexpmonitor/Makefile.in
 plugin/soccer/sexpmonitor/*.la
 plugin/soccer/sexpmonitor/*.lo
+plugin/soccer/soccercontrolaspect/Makefile
+plugin/soccer/soccercontrolaspect/Makefile.in
+plugin/soccer/soccerruleaspect/Makefile
+plugin/soccer/soccerruleaspect/Makefile.in
 plugin/soundsystembass/.deps
 plugin/soundsystembass/.libs
 plugin/soundsystembass/Makefile
