*** empty log message ***

--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -7,6 +7,7 @@ initeffector/initeffector.cpp \
 initeffector/initeffector_c.cpp \
 dasheffector/dasheffector.cpp \
 dasheffector/dasheffector_c.cpp \
+kickeffector/kickeffector.h \
 kickeffector/kickeffector.cpp \
 kickeffector/kickeffector_c.cpp \
 soccercontrolaspect/soccercontrolaspect.cpp \
