*** empty log message ***

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,7 @@ plugin/soccer/*.la
 plugin/soccer/*.lo
 plugin/soccer/agentstate/*.lo
 plugin/soccer/agentstate/.deps
+plugin/soccer/agentstate/.dirstamp
 plugin/soccer/agentstate/.libs
 plugin/soccer/agentstate/Makefile
 plugin/soccer/agentstate/Makefile.in
@@ -274,19 +275,20 @@ plugin/soccer/ball/.dirstamp
 plugin/soccer/ball/.libs
 plugin/soccer/ball/Makefile
 plugin/soccer/ball/Makefile.in
+plugin/soccer/ballstateaspect/*.la
+plugin/soccer/ballstateaspect/*.lo
 plugin/soccer/ballstateaspect/.deps
+plugin/soccer/ballstateaspect/.dirstamp
 plugin/soccer/ballstateaspect/.libs
 plugin/soccer/ballstateaspect/Makefile
 plugin/soccer/ballstateaspect/Makefile.in
-plugin/soccer/ballstateaspect/*.la
-plugin/soccer/ballstateaspect/*.lo
+plugin/soccer/createeffector/*.la
 plugin/soccer/createeffector/*.lo
 plugin/soccer/createeffector/.deps
+plugin/soccer/createeffector/.dirstamp
 plugin/soccer/createeffector/.libs
 plugin/soccer/createeffector/Makefile
 plugin/soccer/createeffector/Makefile.in
-plugin/soccer/createeffector/*.la
-plugin/soccer/createeffector/*.lo
 plugin/soccer/dasheffector/*.la
 plugin/soccer/dasheffector/*.lo
 plugin/soccer/dasheffector/.deps
@@ -296,10 +298,15 @@ plugin/soccer/dasheffector/Makefile
 plugin/soccer/dasheffector/Makefile.in
 plugin/soccer/fieldflag/*.lo
 plugin/soccer/fieldflag/.deps
+plugin/soccer/fieldflag/.dirstamp
 plugin/soccer/fieldflag/.libs
 plugin/soccer/fieldflag/Makefile
 plugin/soccer/fieldflag/Makefile.in
 plugin/soccer/fieldflag/initeffector.la
+plugin/soccer/gamestateaspect/*.lo
+plugin/soccer/gamestateaspect/.deps
+plugin/soccer/gamestateaspect/.dirstamp
+plugin/soccer/gamestateaspect/.libs
 plugin/soccer/gamestateaspect/Makefile
 plugin/soccer/gamestateaspect/Makefile.in
 plugin/soccer/initeffector/*.lo
@@ -308,22 +315,39 @@ plugin/soccer/initeffector/.libs
 plugin/soccer/initeffector/Makefile
 plugin/soccer/initeffector/Makefile.in
 plugin/soccer/initeffector/initeffector.la
+plugin/soccer/initeffector/.dirstamp
+plugin/soccer/kickeffector/*.la
+plugin/soccer/kickeffector/*.lo
 plugin/soccer/kickeffector/.deps
+plugin/soccer/kickeffector/.dirstamp
 plugin/soccer/kickeffector/.libs
 plugin/soccer/kickeffector/Makefile
 plugin/soccer/kickeffector/Makefile.in
-plugin/soccer/kickeffector/*.la
-plugin/soccer/kickeffector/*.lo
+plugin/soccer/sexpmonitor/*.la
+plugin/soccer/sexpmonitor/*.lo
 plugin/soccer/sexpmonitor/.deps
+plugin/soccer/sexpmonitor/.dirstamp
 plugin/soccer/sexpmonitor/.libs
 plugin/soccer/sexpmonitor/Makefile
 plugin/soccer/sexpmonitor/Makefile.in
-plugin/soccer/sexpmonitor/*.la
-plugin/soccer/sexpmonitor/*.lo
+plugin/soccer/soccercontrolaspect/*.lo
+plugin/soccer/soccercontrolaspect/.deps
+plugin/soccer/soccercontrolaspect/.dirstamp
+plugin/soccer/soccercontrolaspect/.libs
 plugin/soccer/soccercontrolaspect/Makefile
 plugin/soccer/soccercontrolaspect/Makefile.in
+plugin/soccer/soccerruleaspect/*.lo
+plugin/soccer/soccerruleaspect/.deps
+plugin/soccer/soccerruleaspect/.dirstamp
+plugin/soccer/soccerruleaspect/.libs
 plugin/soccer/soccerruleaspect/Makefile
 plugin/soccer/soccerruleaspect/Makefile.in
+plugin/soccer/visionperceptor/*.lo
+plugin/soccer/visionperceptor/.deps
+plugin/soccer/visionperceptor/.dirstamp
+plugin/soccer/visionperceptor/.libs
+plugin/soccer/visionperceptor/Makefile
+plugin/soccer/visionperceptor/Makefile.in
 plugin/soundsystembass/.deps
 plugin/soundsystembass/.libs
 plugin/soundsystembass/Makefile
