- added gamestateperceptor files

--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -1,6 +1,7 @@
 pkglib_LTLIBRARIES = soccer.la
 
 soccer_la_SOURCES = export.cpp \
+soccertypes.cpp \
 createeffector/createeffector.cpp \
 createeffector/createeffector_c.cpp \
 initeffector/initeffector.cpp \
@@ -20,6 +21,8 @@ agentstate/agentstate.cpp \
 agentstate/agentstate_c.cpp \
 ballstateaspect/ballstateaspect.cpp \
 ballstateaspect/ballstateaspect_c.cpp \
+gamestateperceptor/gamestateperceptor.cpp \
+gamestateperceptor/gamestateperceptor_c.cpp \
 sexpmonitor/sexpmonitor.cpp \
 sexpmonitor/sexpmonitor_c.cpp \
 fieldflag/fieldflag_c.cpp \
@@ -27,7 +30,6 @@ ball/ball.cpp ball/ball_c.cpp ball/ball.h \
 visionperceptor/visionperceptor.h \
 visionperceptor/visionperceptor.cpp \
 visionperceptor/visionperceptor_c.cpp
-
 
 # -module tells automake we're not building a library but a loadable module
 # so we don't need the "lib" prefix in the module name
